# stm32_rtic_app_display

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: board.rs  main.rs  screen.rs
